k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: when-to-work-backend-ingress
  namespace: platformai
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: ps-team-app-alb
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:155400439473:certificate/e08752a7-1c21-492d-8e6f-40b9e0834cd8
    # alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06  # <-- This is the key change
spec:
  ingressClassName: alb
  rules:
  - host: when-to-work-backend.onwavemaker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: when-to-work-backend-service
            port:
              number: 8080
